Corrigindo o cors de novo